--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -425,7 +425,6 @@
     }
   }
 }
-
 .tabNavigation {
   display: flex;
   justify-content: space-between;
@@ -465,14 +464,20 @@
 
   &.left {
     transform: translateX(0);
-    width: 50%;
+    width: 33.33%; // 1/3 of the width
+  }
+
+  &.center {
+    transform: translateX(100%);
+    width: 33.33%; // 1/3 of the width
   }
 
   &.right {
-    transform: translateX(100%);
-    width: 50%;
+    transform: translateX(200%);
+    width: 33.33%; // 1/3 of the width
   }
 }
+
 
 .feedbackOverview {
   margin-top: 1rem;
