--- a/src/app/Materials/MaterialComponent.module.scss
+++ b/src/app/Materials/MaterialComponent.module.scss
@@ -14,17 +14,18 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        height: 40vh;
+        height: 25rem;
         width: 100%;
         color: white;
         padding: 2rem;
         background-size: cover;
-        background-position:top;
+        background-position: 50% 10%;
         background-repeat: no-repeat;
         background-color: $primary-blue;
         border-radius: 8px;
         margin-bottom: 2rem;
-
+        transition: background-image 1s ease-in-out;
+    
         &::before {
             content: '';
             position: absolute;
@@ -37,20 +38,20 @@
             pointer-events: none;
             border-radius: 8px;
         }
-
+    
         .content {
             z-index: 2;
             text-align: left;
             width: 60%;
-            margin-top: 10%;
-
+            margin-top: 16rem;
+    
             h1 {
                 font-size: 2.5rem;
                 margin-bottom: 1rem;
                 color: white;
                 font-weight: 700;
             }
-
+    
             p {
                 font-size: 1.2rem;
                 color: #dddfe8;
