--- a/src/app/Materials/[slug]/Slug.module.scss
+++ b/src/app/Materials/[slug]/Slug.module.scss
@@ -5,47 +5,48 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  height: 40vh;
+  height: 25rem;
   width: 100%;
   color: white;
   padding: 2rem;
   background-size: cover;
-  background-position: center;
+  background-position: 50% 25%;
   background-repeat: no-repeat;
   background-color: $primary-blue;
   border-radius: 8px;
   margin-bottom: 2rem;
+  transition: background-image 1s ease-in-out;
 
   &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
-    z-index: 1;
-    pointer-events: none;
-    border-radius: 8px;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
+      z-index: 1;
+      pointer-events: none;
+      border-radius: 8px;
   }
 
   .content {
-    z-index: 2;
-    text-align: left;
-    width: 60%;
-    margin-top: 10%;
+      z-index: 2;
+      text-align: left;
+      width: 60%;
+      margin-top: 16rem;
 
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: white;
-      font-weight: 700;
-    }
+      h1 {
+          font-size: 2rem;
+          margin-bottom: 1rem;
+          color: white;
+          font-weight: 700;
+      }
 
-    p {
-      font-size: 1.2rem;
-      color: #dddfe8;
-    }
+      p {
+          font-size: 1.2rem;
+          color: #dddfe8;
+      }
   }
 }
 
