--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -2,6 +2,8 @@
 
 .reviewSection {
   font-family: 'Mulish';
+  overflow: hidden;
+  
   .vitalsSection{
     margin-top: 5rem;
     background: linear-gradient(135deg, #6a0dad, #9b30ff) !important;
