--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -612,3 +612,8 @@
 .rateh3, .ratep{
    color:white !important;
 }
+.reviewscroll{
+  height:90vh;
+  overflow-y: scroll;
+  margin-bottom:90rem;
+}
