--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -2,7 +2,7 @@
 
 .reviewSection {
   font-family: 'Mulish';
-  overflow: hidden;
+ // overflow: hidden;
   
   .vitalsSection{
     margin-top: 5rem;
@@ -107,6 +107,9 @@
     border-radius: 8px;
     margin-bottom: 2rem;
     transition: background-image 1s ease-in-out;
+    @media (max-width: 768px) {
+      padding-left: 1.5rem;
+    }
 
     &::before {
         content: '';
@@ -115,7 +118,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
+        background: linear-gradient(to top, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
         z-index: 1;
         pointer-events: none;
         border-radius: 8px;
@@ -124,19 +127,45 @@
     .content {
         z-index: 2;
         text-align: left;
-        width: 60%;
+        //width: 60%;
         margin-top: 16rem;
+        // margin-left: 7.125rem;
+   
 
         h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
             color: white;
             font-weight: 700;
+            width:100%;
+            @media (max-width: 1024px) {
+             
+            }
+            @media (max-width: 900px) {
+              font-size: 2rem;
+              line-height:2.5rem;
+            }
+            @media (max-width: 768px) {
+              //width:65%;
+              margin-bottom: 1rem;
+              font-size:2rem;
+              line-height:2rem;
+            }
+            @media (max-width: 600px) {
+              //width:65%;
+              margin-bottom: 0.6rem;
+              font-size:1.5rem;
+              line-height:2rem;
+            }
         }
 
         p {
             font-size: 1.2rem;
             color: #dddfe8;
+            @media (max-width: 600px) {
+              font-size: 1rem;
+              line-height:1.5rem;
+            }
         }
     }
 }
@@ -427,6 +456,7 @@
     }
   }
 }
+ 
 .tabNavigation {
   display: flex;
   justify-content: space-between;
@@ -434,6 +464,10 @@
   position: relative;
   border-bottom: 2px solid #ddd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  @media (max-width: 600px) {
+    flex-direction: column;
+    box-shadow: none;
+  }
 }
 
 .tabButton {
@@ -448,7 +482,10 @@
   transition: color 0.3s ease;
   position: relative;
   text-align: center;
-
+  @media (max-width: 600px) {
+    border-bottom: 2px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
   &:hover {
     color: #0056b3;
   }
@@ -464,23 +501,41 @@
   height: 2px;
   background-color: #007bff;
   transition: transform 0.3s ease;
-
+  @media (max-width: 600px) {
+    flex-direction: column;
+    //top:0;
+   // bottom: auto;
+  }
+  
   &.left {
     transform: translateX(0);
-    width: 33.33%; // 1/3 of the width
+    width: 33.33%;
+    @media (max-width: 600px) {
+      width: 100%;
+      transform: translate(0, -6.5rem);
+    }
   }
 
   &.center {
     transform: translateX(100%);
     width: 33.33%; // 1/3 of the width
+   // top:12rem;
+   @media (max-width: 600px) {
+    transform: translate(0, -3.2rem);
+    width:100%;
+  //transform: translateX(100%);
+  }
   }
 
   &.right {
     transform: translateX(200%);
     width: 33.33%; // 1/3 of the width
+    @media (max-width: 600px) {
+      transform: translate(0, -2px);
+      width:100%;
+    }
   }
 }
-
 
 .feedbackOverview {
   margin-top: 1rem;
@@ -612,8 +667,8 @@
 .rateh3, .ratep{
    color:white !important;
 }
-.reviewscroll{
+/*.reviewscroll{
   height:90vh;
   overflow-y: scroll;
   margin-bottom:90rem;
-}
+}*/
