--- a/src/app/Reviews/components/Testimonials.module.scss
+++ b/src/app/Reviews/components/Testimonials.module.scss
@@ -9,23 +9,35 @@
   margin-top: 2rem;
   color: white;
   text-align: center;
+  @media (max-width: 600px) {
+    padding: 1.5rem;
+  }
 
   h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
     font-weight: 700;
+    @media (max-width: 600px) {
+      font-size: 1.5rem;
+    }
   }
 
   p {
     font-size: 1.2rem;
-    color: #dddfe8;
+    color: white;
     margin-bottom: 2rem;
+    @media (max-width: 600px) {
+      font-size: 1.1rem;
+    }
   }
 
   .videoGrid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   .videoWrapper {
