--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -3,6 +3,94 @@
 .reviewSection {
   font-family: 'Mulish';
  // overflow: hidden;
+ .reviewSection_content {
+  padding: 1rem 7.125rem;
+  @media (max-width: 1200px) {
+   padding: 1rem 4rem;
+  }
+  @media (max-width: 900px) {
+    padding: 1rem 1.5rem;
+  }
+}
+
+.heroSection {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 25rem;
+  width: 100%;
+  color: white;
+  padding: 2rem;
+  background-size: cover;
+  background-position: 50% 25%;
+  background-repeat: no-repeat;
+  background-color: $primary-blue;
+  border-radius: 8px;
+  margin-bottom: 2rem;
+  transition: background-image 1s ease-in-out;
+  @media (max-width: 768px) {
+    padding-left: 1.5rem;
+  }
+
+  &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to top, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
+      z-index: 1;
+      pointer-events: none;
+      border-radius: 8px;
+  }
+
+  .content {
+      z-index: 2;
+      text-align: left;
+      //width: 60%;
+      margin-top: 16rem;
+      // margin-left: 7.125rem;
+ 
+
+      h1 {
+          font-size: 2.5rem;
+          margin-bottom: 1rem;
+          color: white;
+          font-weight: 700;
+          width:100%;
+          @media (max-width: 1024px) {
+           
+          }
+          @media (max-width: 900px) {
+            font-size: 2rem;
+            line-height:2.5rem;
+          }
+          @media (max-width: 768px) {
+            //width:65%;
+            margin-bottom: 1rem;
+            font-size:2rem;
+            line-height:2rem;
+          }
+          @media (max-width: 600px) {
+            //width:65%;
+            margin-bottom: 0.6rem;
+            font-size:1.5rem;
+            line-height:2rem;
+          }
+      }
+
+      p {
+          font-size: 1.2rem;
+          color: #dddfe8;
+          @media (max-width: 600px) {
+            font-size: 1rem;
+            line-height:1.5rem;
+          }
+      }
+  }
+}
   
   .vitalsSection{
     margin-top: 5rem;
@@ -22,6 +110,9 @@
       transform: translateY(-5px);
       box-shadow: 0 16px 32px rgba(0, 0, 0, 0.25);
     }
+    @media (max-width: 900px) {
+      padding: 0 0.5rem 0.3rem;
+    }
   
     &::before {
       content: '';
@@ -32,17 +123,24 @@
       height: 200px;
       background: rgba(255, 255, 255, 1);
       border-radius: 50%;
-    //  z-index: 1;
       transform: scale(1);
       transition: transform 0.5s ease-in-out;
+      @media (max-width: 600px) {
+        width: 130px;
+        height: 130px;
+      }
     }
   
     &:hover::before {
       transform: scale(1.2);
+      @media (max-width: 600px) {
+        transform: scale(1.1);
+      }
     }
   
     &::after {
       content: '';
+      display:none; //for now
       position: absolute;
       bottom: -50px;
       right: -50px;
@@ -58,121 +156,53 @@
     &:hover::after {
       transform: scale(1.3);
     }
-
-  }
-  
-  
-  .reviewSection_content {
-    padding: 1rem 7.125rem;
-    @media (max-width: 1200px) {
-      padding: 1rem 4rem;
-    }
-    @media (max-width: 900px) {
-      padding: 1rem 1.5rem;
-    }
-  }
-  .reviewHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  
-  .reviewIcon {
-    width: 40px;
-    height: auto;
-    margin-right: 1rem;
-    z-index:3;
-  }
-  .reviewIcon2 {
-    width: 70px;
-    height: auto;
-    margin-right: 1rem;
-    z-index:3;
-  }
-
-  .heroSection {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    height: 25rem;
-    width: 100%;
-    color: white;
-    padding: 2rem;
-    background-size: cover;
-    background-position: 50% 25%;
-    background-repeat: no-repeat;
-    background-color: $primary-blue;
-    border-radius: 8px;
-    margin-bottom: 2rem;
-    transition: background-image 1s ease-in-out;
-    @media (max-width: 768px) {
-      padding-left: 1.5rem;
-    }
-
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to top, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
-        z-index: 1;
-        pointer-events: none;
-        border-radius: 8px;
-    }
-
-    .content {
-        z-index: 2;
-        text-align: left;
-        //width: 60%;
-        margin-top: 16rem;
-        // margin-left: 7.125rem;
-   
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: white;
-            font-weight: 700;
-            width:100%;
-            @media (max-width: 1024px) {
-             
-            }
-            @media (max-width: 900px) {
-              font-size: 2rem;
-              line-height:2.5rem;
-            }
-            @media (max-width: 768px) {
-              //width:65%;
-              margin-bottom: 1rem;
-              font-size:2rem;
-              line-height:2rem;
-            }
-            @media (max-width: 600px) {
-              //width:65%;
-              margin-bottom: 0.6rem;
-              font-size:1.5rem;
-              line-height:2rem;
-            }
+    .healrespo{
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1rem;
+      .reviewIcon {
+        width: 40px;
+        height: auto;
+        margin-right: 1rem;
+        z-index:3;
+        margin-top: 1rem;
+      }
+      .reviewIcon2 {
+        width: 70px;
+        height: auto;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        z-index:3;
+      }
+    
+      .moreLinkvitals {
+        background-color: #9b30ff !important;
+        &:hover {
+          background-color: #6a0dad !important;
         }
-
-        p {
-            font-size: 1.2rem;
-            color: #dddfe8;
-            @media (max-width: 600px) {
-              font-size: 1rem;
-              line-height:1.5rem;
-            }
-        }
+      }
+        .moreLink ,   
+        .moreLinkvitals {
+          display: inline-block;
+         // margin-top: 1.5rem;
+          padding: 0.5rem 1rem;
+          background-color: $primary-blue;
+          color: white;
+          border-radius: 8px;
+          text-decoration: none;
+          font-weight: $font-weight-bold;
+          transition: background-color 0.3s ease;
+    
+          &:hover {
+            background-color: $hover-blue;
+          }
+      }
     }
-}
-
+    }
 
   .reviewContainer {
-    margin-top: 3rem;
+   // margin-top: 1rem;
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
@@ -194,16 +224,17 @@
       padding-bottom: 0.5rem;
       text-transform: uppercase;
       letter-spacing: 1px;
-  
+      text-align: center;
       &::after {
-          content: '';
-          position: absolute;
-          left: 0;
-          bottom: 0;
-          width: 50px;
-          height: 3px;
-          background-color: white;
-          border-radius: 3px;
+        content: '';
+        position: absolute;
+        left: 50%; /* Start from the center */
+        transform: translateX(-50%); /* Center the underline */
+        bottom: 0;
+        width: 50px;
+        height: 3px;
+        background-color: white;
+        border-radius: 3px;
       }
   
   }
@@ -270,28 +301,7 @@
       }
     }
       
-  .moreLinkvitals {
-    background-color: #9b30ff !important;
-    &:hover {
-      background-color: #6a0dad !important;
-    }
-  }
-    .moreLink ,   
-    .moreLinkvitals {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.5rem 1rem;
-      background-color: $primary-blue;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: $font-weight-bold;
-      transition: background-color 0.3s ease;
 
-      &:hover {
-        background-color: $hover-blue;
-      }
-    }
   }
 
   .dropdown {
@@ -302,6 +312,9 @@
   margin-bottom: 2rem;
   position: relative;
   border-bottom: 2px solid black;
+  @media (max-width: 600px) {
+    border-bottom: none;
+  }
 }
 
 .tabButton {
@@ -336,11 +349,20 @@
   &.left {
     transform: translateX(0);
     width: 50%;
+    @media (max-width: 600px) {
+      transform: translate(0, -3.2rem);
+      width:100%;
+    //transform: translateX(100%);
+    }
   }
 
   &.right {
     transform: translateX(100%);
     width: 50%;
+    @media (max-width: 600px) {
+      transform: translate(0, -2px);
+      width:100%;
+    }
   }
 }
     margin-top: 1.5rem;
@@ -349,6 +371,7 @@
       margin-top: 1rem;
     }
     .dropdownHeader {
+      z-index: 6000 !important;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -405,6 +428,10 @@
           border-radius: 8px;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           transition: transform 0.3s ease, box-shadow 0.3s ease;
+          @media (max-width: 768px) {
+            flex-direction: column;
+            gap:0.5rem;
+          }
 
           &:hover {
             transform: translateY(-3px);
@@ -420,6 +447,9 @@
             color: #444;
             font-weight: 600;
             width: 40%;
+            @media (max-width: 768px) {
+              width: 100%;
+            }
           }
 
           .feedbackBar {
@@ -427,16 +457,23 @@
             align-items: center;
             width: 55%;
             margin-left: 1rem;
+            @media (max-width: 768px) {
+              width: 100%;
+            }
+            @media (max-width: 600px) {
+              flex-direction: column;
+              gap:0.5rem;
+            }
 
             .progress {
-              flex: 1;
+             // flex: 1;
               height: 10px;
               border-radius: 4px;
               background-color: #f1f1f1;
               margin-right: 0.5rem;
               position: relative;
               border: 1px solid #ccc;
-
+              width:100%;
               .progressFilled {
                 background: linear-gradient(90deg, red, blue);
                 height: 100%;
@@ -571,11 +608,16 @@
     justify-content: space-between;
     align-items: flex-start;
      width: 100%;
-     
+     @media (max-width: 600px) {
+      display:flex;
+      flex-direction: column;
+      gap:1rem;
+    }
     .ratingOverall {
       display: flex;
       flex-direction: row;
       gap:0.4rem;
+     
       h3 {
         font-size: 5rem;
         color: white;
@@ -601,6 +643,9 @@
 
     .ratingBreakdown {
       width: 60%;
+      @media (max-width: 600px) {
+        width:100%;
+      }
 
       .ratingRow {
         display: flex;
