--- a/src/app/Reviews/components/Gratitude.module.scss
+++ b/src/app/Reviews/components/Gratitude.module.scss
@@ -8,18 +8,31 @@
   margin-top: 2rem;
   color: white;
   text-align: center;
+  @media (max-width: 1200px) {
+    padding: 1rem 4rem;
+  }
+  @media (max-width: 900px) {
+    padding: 1rem 1.5rem;
+  }
 
   .content {
     h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
       font-weight: 700;
+      @media (max-width: 600px) {
+        font-size: 1.5rem;
+      }
     }
 
     p {
       font-size: 1.2rem;
       color: white;
       margin-bottom: 1.5rem;
+      @media (max-width: 600px) {
+        font-size: 1.1rem;
+       text-align: left;
+      }
     }
   }
 
@@ -144,7 +157,7 @@
     .bigImage {
       width: 100%;
       max-width: 60rem;
-      height: auto;
+     // height: auto;
       border-radius: 8px;
       box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
     }
@@ -189,10 +202,12 @@
       justify-content: center;
       align-items: center;
       gap: 1rem;
+      flex-wrap: wrap;
   
       .imageBox {
         background-color: white;
         border-radius: 12px;
+        height:fit-content;
         padding: 1rem;
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
         text-align: center;
@@ -200,8 +215,10 @@
   
         img {
           width: 100%;
-          height: 12rem;
+          height: auto;
+          max-height: 12rem;
           border-radius: 8px;
+          object-fit: cover;
         }
   
         .imageTitle {
