--- a/src/app/Reviews/components/Testimonials.module.scss
+++ b/src/app/Reviews/components/Testimonials.module.scss
@@ -9,7 +9,7 @@
   margin-top: 2rem;
   color: white;
   text-align: center;
-  @media (max-width: 600px) {
+  @media (max-width: 900px) {
     padding: 1.5rem;
   }
 
@@ -23,11 +23,12 @@
   }
 
   p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: white;
     margin-bottom: 2rem;
     @media (max-width: 600px) {
       font-size: 1.1rem;
+      text-align: justify;
     }
   }
 
