--- a/src/app/Herosection/HeroSection.module.scss
+++ b/src/app/Herosection/HeroSection.module.scss
@@ -1,5 +1,6 @@
 .heroSection {
   position: relative;
+  overflow-x: hidden !important;
   display: flex;
   align-items: center;
   justify-content: flex-start;
