--- a/src/app/Reviews/components/Gratitude.module.scss
+++ b/src/app/Reviews/components/Gratitude.module.scss
@@ -164,7 +164,7 @@
 
     .linkButton {
       position: absolute;
-      bottom: 20px;
+      bottom: 0px;
       left: 50%;
       transform: translateX(-50%);
       padding: 0.5rem 1.5rem;
@@ -177,6 +177,10 @@
 
       &:hover {
         background-color: $hover-blue;
+      }
+      @media (max-width: 600px) {
+        font-size: 0.7rem;
+        bottom:0px;
       }
     }
     
@@ -243,6 +247,9 @@
   
       &:hover {
         background-color: $hover-blue;
+      }
+      @media (max-width: 600px) {
+        font-size: 0.6rem;
       }
     }
   }
