--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
 html, body {
   font-family: var(--font-family-base);
   font-size: var(--font-size-normal);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
