--- a/src/app/Reviews/Review.module.scss
+++ b/src/app/Reviews/Review.module.scss
@@ -2,6 +2,7 @@
 
 .reviewSection {
   font-family: 'Mulish';
+  overflow-x: hidden !important;
  // overflow: hidden;
  .reviewSection_content {
   padding: 1rem 7.125rem;
