--- a/src/app/Materials/MaterialComponent.module.scss
+++ b/src/app/Materials/MaterialComponent.module.scss
@@ -20,13 +20,16 @@
         color: white;
         padding: 2rem;
         background-size: cover;
-        background-position: 50% 10%;
+        background-position: 50% 25%;
         background-repeat: no-repeat;
         background-color: $primary-blue;
         border-radius: 8px;
         margin-bottom: 2rem;
         transition: background-image 1s ease-in-out;
-    
+        @media (max-width: 768px) {
+          padding-left: 1.5rem;
+        }
+      
         &::before {
             content: '';
             position: absolute;
@@ -34,38 +37,74 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
+            background: linear-gradient(to top, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
             z-index: 1;
             pointer-events: none;
             border-radius: 8px;
         }
-    
+      
         .content {
             z-index: 2;
             text-align: left;
-            width: 60%;
+            //width: 60%;
             margin-top: 16rem;
-    
+            // margin-left: 7.125rem;
+       
+      
             h1 {
                 font-size: 2.5rem;
                 margin-bottom: 1rem;
                 color: white;
                 font-weight: 700;
+                width:100%;
+                @media (max-width: 1024px) {
+                 
+                }
+                @media (max-width: 900px) {
+                  font-size: 2rem;
+                  line-height:2.5rem;
+                }
+                @media (max-width: 768px) {
+                  //width:65%;
+                  margin-bottom: 1rem;
+                  font-size:2rem;
+                  line-height:2rem;
+                }
+                @media (max-width: 600px) {
+                  //width:65%;
+                  margin-bottom: 0.6rem;
+                  font-size:1.5rem;
+                  line-height:2rem;
+                }
             }
-    
+      
             p {
                 font-size: 1.2rem;
                 color: #dddfe8;
+                @media (max-width: 600px) {
+                  font-size: 1rem;
+                  line-height:1.5rem;
+                }
             }
         }
-    }
+      }
 
-    .materialLinks {
-        display: flex;
-        justify-content: space-between;
+      .materialLinks {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
         width: 100%;
-        margin: 4rem 0;
-        padding: 0 7.125rem;
+        margin: 2rem 0;
+        padding: 0 7.125rem;      
+        @media (max-width: 1200px) {
+            padding: 0rem 4rem;
+          }
+      
+          @media (max-width: 900px) {
+            display: flex;
+            padding: 0rem 1.5rem;
+            flex-direction: column;
+          }
 
         .materialGroup {
             flex: 1;
@@ -73,7 +112,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             padding: 2rem;
-            margin-right: 2rem;
+            //margin-right: 2rem;
 
             &:last-child {
                 margin-right: 0;
