--- a/src/app/Materials/MediaCardComponent.module.scss
+++ b/src/app/Materials/MediaCardComponent.module.scss
@@ -54,7 +54,7 @@
 
   .pdfPreviewImage {
     width: 100%;
-    height: auto;
+    height: 30rem;
     margin-bottom: 10px;
     border-radius: 4px;
   }
