--- a/src/app/Materials/[slug]/Slug.module.scss
+++ b/src/app/Materials/[slug]/Slug.module.scss
@@ -1,5 +1,4 @@
 @import '../../../styles/colors.scss';
-
 .heroSection {
   position: relative;
   display: flex;
@@ -16,6 +15,9 @@
   border-radius: 8px;
   margin-bottom: 2rem;
   transition: background-image 1s ease-in-out;
+  @media (max-width: 768px) {
+    padding-left: 1.5rem;
+  }
 
   &::before {
       content: '';
@@ -24,7 +26,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
+      background: linear-gradient(to top, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
       z-index: 1;
       pointer-events: none;
       border-radius: 8px;
@@ -33,19 +35,45 @@
   .content {
       z-index: 2;
       text-align: left;
-      width: 60%;
+      //width: 60%;
       margin-top: 16rem;
+      // margin-left: 7.125rem;
+ 
 
       h1 {
-          font-size: 2rem;
+          font-size: 2.5rem;
           margin-bottom: 1rem;
           color: white;
           font-weight: 700;
+          width:100%;
+          @media (max-width: 1024px) {
+           
+          }
+          @media (max-width: 900px) {
+            font-size: 2rem;
+            line-height:2.5rem;
+          }
+          @media (max-width: 768px) {
+            //width:65%;
+            margin-bottom: 1rem;
+            font-size:2rem;
+            line-height:2rem;
+          }
+          @media (max-width: 600px) {
+            //width:65%;
+            margin-bottom: 0.6rem;
+            font-size:1.5rem;
+            line-height:2rem;
+          }
       }
 
       p {
           font-size: 1.2rem;
           color: #dddfe8;
+          @media (max-width: 600px) {
+            font-size: 1rem;
+            line-height:1.5rem;
+          }
       }
   }
 }
