--- a/src/app/Contact/Contact.module.scss
+++ b/src/app/Contact/Contact.module.scss
@@ -22,7 +22,13 @@
         background-color: $primary-blue;
         border-radius: 8px;
         margin-bottom: 2rem;
-        padding: 0; /* Remove padding from heroSection */
+        padding: 0;
+        @media (max-width: 768px) {
+          // flex-direction: column-reverse;
+           //justify-content: end;
+          }
+   
+        
 
         .contactContent {
             z-index: 2;
@@ -32,19 +38,51 @@
             flex-direction: column;
             justify-content: center;
             background: rgba(3, 112, 255, 0.9);
-            border-radius: 8px 0 0 8px; /* Keep the left border-radius */
+            border-radius: 8px 0 0 8px; 
+            padding-left: 7.25rem;
+            @media (max-width: 1200px) {
+                padding: 0rem 4rem;
+              }
+            @media (max-width: 900px) {
+                padding-left: 1.5rem;
+              }
+              @media (max-width: 768px) {
+                 positon:absolute;
 
+                }
             h1 {
                 font-size: 2.5rem;
                 margin-bottom: 1rem;
                 color: white;
                 font-weight: 700;
                 line-height: 2rem;
+                @media (max-width: 900px) {
+                    font-size: 2rem;
+                    line-height:2.5rem;
+                  }
+                  @media (max-width: 768px) {
+                    //width:65%;
+                    margin-bottom: 1rem;
+                    font-size:1.5rem;
+                    line-height:2rem;
+                  }
+                  @media (max-width: 600px) {
+                    //width:65%;
+                    margin-bottom: 0.6rem;
+                    font-size:1.2rem;
+                    line-height:2rem;
+                  }
             }
 
             p {
                 font-size: 1.2rem;
                 color: #dddfe8;
+                @media (max-width: 768px) {
+                    //width:65%;
+                    margin-bottom: 0.6rem;
+                    font-size:1rem;
+                    line-height:1.5rem;
+                  }
             }
         }
 
@@ -74,6 +112,14 @@
         background-color: #fff;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
+        @media (max-width: 1200px) {
+            padding: 0rem 4rem;
+          }
+        @media (max-width: 900px) {
+            padding-left: 1.5rem;
+            flex-direction: column-reverse;
+            gap:2rem;
+          }
 
         .infoSection {
             flex: 1;
